# Distanzmatrizen_Berechnungen

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: df_final_master_pseudo.pkl
scripts/: pipeline.ipynb
src/: application.py  convert_to_long.py  core_metrics.py  hs.py  naics.py  parameter_grid.py  paths.py  set_metrics.py
src/run_parameter_grid/: run_grid_search_APP.py  run_grid_search_HS.py  run_grid_search_NAICS.py
tests/integration/: test_integration.py
tests/unit/: test_application.py  test_hs.py  test_naics.py  test_parameter_grid.py  test_set_metrics.py  test_special_cases.py
